Fix alignment of buttons

--- a/practice-for-ch-html-css-aatimes-main/app/assets/stylesheets/components/_main_nav.scss
+++ b/practice-for-ch-html-css-aatimes-main/app/assets/stylesheets/components/_main_nav.scss
@@ -15,7 +15,8 @@
 
   > ul {
     > li {
-      
+      display: inline-block;
+      align-items: vertical;
     }
   }
 
@@ -27,7 +28,9 @@
 .right-nav  {
   > ul {
     > li {
-      
+      display: inline-block;
+      align-items: vertical; 
+      font-size: 50px;
     }
 
     > li:last-of-type {
